# BeautyShopBooking

./: .gitignore  Dockerfile  build.sh  migrate_and_start.sh  pyproject.toml  render.yaml
apps/: models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_user_unhashed_password_alter_user_phone_number.py  0003_alter_user_unhashed_password.py  0004_business_is_active.py  0005_alter_business_is_active.py
apps/models/: BaseModel.py  __init__.py  services.py  users.py
apps/views/: adminViews.py  otp_views.py  statisticviews.py
root/: settings.py  urls.py
