[project]
name = "onlinebooking"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-ckeditor-5>=0.2.18",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "drf-spectacular[sidecar]>=0.28.0",
    "flake8>=7.3.0",
    "markdown>=3.9",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
]
